# optionsmagic

./: .gitignore  ANANTH_ACTION_ITEMS_SATURDAY.md  CLAUDE.md  CRON_JOBS_CONFIG.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_OPTIONS.md  FINAL_STATUS_REPORT_FEB11.md  FIRST_WEEK_MONITORING_TEMPLATE.md  FRESH_CODE_REVIEW.md  HEARTBEAT_10AM_SUMMARY.md  HEARTBEAT_1PM_FINAL.md  HEARTBEAT_7PM_FINAL.md  INDEX.md  INSTANT_CREDENTIAL_INJECTION.sh  LAUNCH_DAY_CHECKLIST.md  LAUNCH_DAY_EMERGENCY_PROCEDURES.md  LAUNCH_DAY_PREFLIGHT.txt  LAUNCH_DAY_RUNBOOK_GUIDE.md  LAUNCH_DAY_TRADES_GUIDE.md  MASTER_LAUNCH_SEQUENCE.sh  MAX_CREDENTIAL_DEPLOYMENT.md  MAX_WEEKEND_STATUS_FOR_ANANTH.md  MONDAY_LAUNCH_GUIDE.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_CREDENTIAL_SETUP.md  PHASE_2_LAUNCH_CHECKLIST.md  PHASE_2_PREP.md  PRE_LAUNCH_HEALTH_CHECK_GUIDE.md  PRIORITY_1_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  QUICK_REFERENCE_SAT_MAR8.md  README.md  RUN_SATURDAY_VALIDATION.sh  SATURDAY_MONITORING_GUIDE.md  SATURDAY_MORNING_STATUS_BRIEF.md  SAT_6AM_FINAL_CHECKLIST.md  (+22 more)
api/: README.md  package-lock.json  worker.js
config/: dashboard_config.json
data_collection/: alphavantage.py  calculate_option_greeks.py  cleanup_old_data.py  finviz.py  generate_opportunities_simple.py  generate_options_opportunities.py  next_options_dates.py  options_prices.py  options_prices_yfin.py  options_yahoo_scrape.py  stock_data_yfin.py  test.ipynb  test.py  test_tradestation.py  test_tradestation2.py  tradestation.md  tradestation_api_access.py  (+6 more)
(+81 files in other folders)
