[tool.poetry]
name = "options_magic_data_collection"
version = "0.1.0"
description = ""
authors = ["Ananth Tirumanur <akrish1982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.1.63"
pandas = "^1.3.3"
numpy = "^1.21.2"
yahoo-fin = "^0.8.9.1"
requests-html = "^0.10.0"
psycopg2 = "^2.9.10"
jsonschema = "^4.23.0"
html5lib = "^1.1"
pytz = "^2025.1"
python-dotenv = "^1.0.1"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
